Most the games logic is done. Few bugs to fix Make sure after player wins to disallow more moves. Game needs UI and design tweaks(very ugly)
After that I will start adding more advanced features

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: blanchedalmond;
+  background-color: grey;
 }
 
 .board {
@@ -23,10 +23,19 @@ body {
   
 }
 
+.box:hover {
+  background-color: yellow;
+}
+
 .title {
   text-align: center;
 }
 
 .players {
   text-align: center;
+}
+
+
+#restartButton {
+  margin-top: 10px;
 }
